# NWQ-Sim

./: .aider.chat.history.md  .aider.input.history  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  VERSION.txt  clifford_test.cpp  default_config.json  mpitest.py  pyproject.toml  setup.py  tamm_setup.sh  temp.c
examples/: CMakeLists.txt  cpu_mpi.cpp  cpu_sin.cpp  example_utils.hpp
python/: CMakeLists.txt
python/examples/: basic_statevector.py
python/src/: nwqsim.cpp
qasm/: CMakeLists.txt  Makefile  backendManager.hpp  cuda_test.cu  hoptest.cpp  nwq_qasm.cpp  nwq_qasm_amd.cpp  nwq_qasm_nvgpu.cu  nwq_qasm_nvgpu_mpi.cu  qv.cpp  tamm_test.cpp  test_itensor.cpp
qasm/archived/: archived_nwq_qasm.cpp  nwq_qasm_nvgpu_mpi.cu
qasm/src/: backendManager.hpp  cl_parser.hpp  parser_util.hpp  qasm_parser.hpp  qasm_parser_expr.hpp  test.qasm
refactored_src/: CMakeLists.txt  circuit.hpp  gate.hpp  nwqsim_core.hpp  test_cpu_state.cpp
refactored_src/gate_kernels/: cpu_gates.hpp  gpu_gates.cuh  multi_gpu_gates.cuh  omp_gates.hpp
refactored_src/memory/: memory_handle.hpp  state_view.hpp
refactored_src/simulator/: device_gate_builder.hpp  fusion.cpp  fusion.hpp  sim_types.hpp  sv_sim.cpp  sv_sim.hpp
src/: CMakeLists.txt  Makefile  adder_n10.py  adder_n10_cpu_omp.cpp  adder_n10_cpu_sin.cpp  circuit.cpp  config.h  config.mk  cpu_util.hpp  dmsim_cpu_omp.hpp  dmsim_python.cpp  fusion.hpp  gate.h  nwqsim_cpu_avx2.hpp  nwqsim_cpu_avx512.hpp  python_interface.cpp  svsim_cpu_omp.hpp  svsim_cpu_sin.hpp  svsim_python.cpp  test.cpp  test_cpu_omp.cpp  test_cpu_sin.cpp  test_sv_cpu_omp.cpp  test_sv_cpu_sin.cpp  util.h
src/stabsim/: stab_cpu.cpp
src/svsim/: svsim_cpu.cpp
stabilizer/: CMakeLists.txt  T_pushthrough_bench.ipynb  T_seperation_test  T_seperation_test.cpp  circuit_stats_save.json  circuit_test  circuit_test.cpp  circuit_test_layered.cpp  cirq_random.py  cirq_testing.ipynb  clifford_test  clifford_test.cpp  cnot_lattice  cnot_lattice.cpp  function_notes.md  gc_vs_qwc_bench.ipynb  graph_test  graph_test.cpp  graphstate_notes  hex_color_code.cpp  ldpc_example.cpp  merged_common_circuit_stats.csv  pauli_math.hpp  qiskit_honeycomb.py  qiskit_random.py  qiskit_repetition_code.py  qiskit_surface_code.py  qiskit_testing.ipynb  qubits_time.txt  qubits_time_HCNOT.txt  random_bench.py  random_circuit_test.cpp  readme.md  sim_bench.ipynb  sim_benchstab_64.txt  sorted_circuit_layers_table.csv  sorted_circuit_stats_table.csv  stab_cpu_test  stab_cpu_test.cpp  stabsim_honeycomb.cpp  (+21 more)
stabilizer/QFT_transpilation_data/: qft_n18_iter2.txt  qft_n28_iter_2.txt  qft_n28_iter_2_stabilizers.txt  qft_n32_iter_2.txt  qft_n32_iter_2_stabilizers.txt  qft_n32_sk.txt  qft_n36_iter_2.txt  qft_n36_iter_2_stabilizers.txt  qft_n36_sk.txt
stabilizer/STABSim_example/: STABSim_HowTo.md  example  example.cpp  logical_cnot.qasm
stabilizer/T_piler_work/: T_seperation_test.cpp  comparison.ipynb  comparison.py  pyzx_transpiler.py
stabilizer/T_transpilation_test/: adder_n4.qasm  basis_test_n4.qasm  bell_n4.qasm  bv_n14.qasm  cc_n12.qasm  deutsch_n2.qasm  dnn_n16.qasm  fredkin_n3.qasm  gcm_h6.qasm  ghz_state_n23.qasm  grover_n2.qasm  ipea_n2.qasm  knn_n25.qasm  lpn_n5.qasm  multiply_n13.qasm  pea_n5.qasm  qaoa_n3.qasm  qec9xz_n17.qasm  qec_sm_n5.qasm  qft_n18_iter1.qasm  qft_n18_iter2.qasm  qft_n18_iter3.txt  qft_n4.qasm  qpe_n9.qasm  qrng_n4.qasm  quantumwalks_n2.qasm  square_root_n18.qasm  swap_test_n115.qasm  swap_test_n25.qasm  teleportation_n3.qasm  vqe_uccsd_n8.qasm  wstate_n27.qasm  wstate_n76.qasm
stabilizer/damping_work/: comb_fidelity.ipynb  combined_channel  combined_channel.cpp  damping_analysis.ipynb  damping_channel  damping_channel.cpp  damping_channel_time  damping_channel_time.cpp  damping_fidelity.ipynb  damping_stim.ipynb  damping_time_rep.ipynb  excitation_channel  memory_experiments.ipynb  noisy_code_sim  noisy_code_sim.cpp  quasiprobability_channel  quasiprobability_channel.cpp  rsc_excitations.ipynb  surface_code_ler.ipynb  tomography_util.py  variance.ipynb
stabilizer/fowler_improved/: cpu_stab_19.txt  cpu_stab_39.txt  cpu_stab_49.txt  cpu_stab_53.txt  cpu_stab_55.txt  cpu_stab_61.txt  cpu_stab_65.txt  nvgpu_stab_103.txt  nvgpu_stab_11.txt  nvgpu_stab_111.txt  nvgpu_stab_113.txt  nvgpu_stab_119.txt  nvgpu_stab_121.txt  nvgpu_stab_123.txt  nvgpu_stab_125.txt  nvgpu_stab_15.txt  nvgpu_stab_21.txt  nvgpu_stab_25.txt  nvgpu_stab_27.txt  nvgpu_stab_31.txt  nvgpu_stab_33.txt  nvgpu_stab_41.txt  nvgpu_stab_43.txt  nvgpu_stab_47.txt  nvgpu_stab_49.txt  nvgpu_stab_51.txt  nvgpu_stab_53.txt  nvgpu_stab_55.txt  nvgpu_stab_57.txt  nvgpu_stab_59.txt  nvgpu_stab_69.txt  nvgpu_stab_73.txt  nvgpu_stab_75.txt  nvgpu_stab_77.txt  nvgpu_stab_79.txt  nvgpu_stab_81.txt  nvgpu_stab_85.txt  nvgpu_stab_89.txt  nvgpu_stab_9.txt  nvgpu_stab_95.txt  (+12 more)
stabilizer/fowler_surface_code/: cirq_15.txt  cirq_21.txt  cirq_23.txt  cirq_27.txt  cirq_47.txt  cirq_67.txt  cirq_69.txt  cirq_71.txt  cpu_stab_101.txt  cpu_stab_103.txt  cpu_stab_105.txt  cpu_stab_109.txt  cpu_stab_111.txt  cpu_stab_17.txt  cpu_stab_21.txt  cpu_stab_23.txt  cpu_stab_25.txt  cpu_stab_33.txt  cpu_stab_41.txt  cpu_stab_45.txt  cpu_stab_5.txt  cpu_stab_51.txt  cpu_stab_63.txt  cpu_stab_69.txt  cpu_stab_7.txt  cpu_stab_73.txt  cpu_stab_75.txt  cpu_stab_77.txt  cpu_stab_81.txt  cpu_stab_85.txt  cpu_stab_9.txt  nvgpu_stab_107.txt  nvgpu_stab_111.txt  nvgpu_stab_113.txt  nvgpu_stab_115.txt  nvgpu_stab_17.txt  nvgpu_stab_41.txt  nvgpu_stab_49.txt  (+17 more)
tests/: CMakeLists.txt  circuit_test.cpp  cpu_sin_test.cpp
vqe/: CMakeLists.txt  ExaChemQFlowConfig.cmake.in  FindPythonModule.cmake  NWQSimQFlowConfig.cmake.in  README.md  VQE_Functionality_Reference.md  adapt_vqe_perlmutter.md  exachem_qflow_lib.cpp  main.cpp  main.cu  main_full.cpp  mma_config.json  nwqsim_qflow_lib-config.cmake.in  nwqsim_qflow_lib.cpp  perlmutter_vqe_setup.sh  qflow.cpp  qflow_py.cpp  uccsd_min_self_contained.cpp
xacc/: CMakeLists.txt  README.md  bell.cpp  gcm_draft.cpp  nwq_accelerator.cpp  nwq_accelerator.hpp  nwq_api.hpp  toy_vqe.cpp  vqe_be5.cpp
(+3170 files in other folders)
